# DumpSource2

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/main/: CMakeLists.txt  appframework.cpp  appframework.h  application.h  dllmain.cpp  globalvariables.h  interfaces.h  main.cpp  main.h  modules.h  network_connection.pb.h
src/main/dumpers/concommands/: concommands.cpp  concommands.h
src/main/dumpers/schemas/: schemas.cpp  schemas.h
src/main/utils/: common.cpp  common.h  module.h  oslink.h  plat_unix.cpp  plat_win.cpp  virtual.h
